--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ h1{
 .character {
 	background-color: #fff;
 	margin-bottom: 10px;
+	position: relative;
 }
 .character * {
 	color: #505961
@@ -33,4 +34,25 @@ h1{
 .character img {
 	float: left;
 	margin-right: 20px;
+}
+.button {
+	border: none;
+	background: #505961;
+	text-align: center;
+	padding: 5px 20px;
+	border-radius: 0;
+	position: absolute;
+	bottom: 20px;
+	right: 20px;
+	color: #c9ffed;
+	font-size: 16px;
+	font-family: "Source Code Pro", Arial, Helvetica, sans-serif;
+	transition: .25s all ease-in-out;
+	cursor: pointer;
+	text-decoration: none;
+}
+
+.button:hover {
+	background: deeppink;
+	color: #fff;
 }
