--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ h1{
 	float: left;
 	margin-right: 20px;
 }
+.character-bio-container {
+	background: #fff;
+	padding: 10px;
+}
 .button {
 	border: none;
 	background: #505961;
